--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --project final-frontend --host 0.0.0.0 --port 8081 --public-host $C9_HOSTNAME",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -20,7 +20,13 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@clr/angular": "^0.13.0",
+    "@clr/icons": "^0.13.0",
+    "@clr/ui": "^0.13.0",
+    "@webcomponents/custom-elements": "^1.0.0",
+    "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
+    "ng2-charts": "^1.6.0",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
